chore(server): clean up unused variables and fix deprecated URL constructor